test/assets/invalid/signatures/wrong-monad.hs
main :: Maybe ()
main = putStrLn "Hello World"